--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -51,8 +51,7 @@
     "\n",
     "My solution consists of two separate parts:\n",
     "  1. Digit Localization\n",
-    "  2. Digit Classification\n",
-    "  3. Deployment"
+    "  2. Digit Classification"
    ]
   },
   {
@@ -88,7 +87,7 @@
    "metadata": {},
    "source": [
     "### Load test dataset\n",
-    "I have created a dataset of 8 "
+    "I have created a dataset of 10 handwritten digits, each written on a A4 sheet of paper."
    ]
   },
   {
@@ -534,7 +533,7 @@
     "   - [ML.NET](https://dotnet.microsoft.com/en-us/apps/machinelearning-ai/ml-dotnet) for inference of a trained exported model in onxx format.\n",
     "   - [OpenCvSharp](https://github.com/shimat/opencvsharp)\n",
     " - Frontend\n",
-    "   - Vue.js"
+    "   - Vue/React/Vanilla JS"
    ]
   },
   {
